--- a/React-app/src/index.css
+++ b/React-app/src/index.css
@@ -34,6 +34,9 @@ body {
   .img {  
     @apply w-[40px] h-[40px] rounded-full;
   }
+  .background {  
+    @apply min-h-screen bg-gradient-to-br from-[#0f051d] via-[#400d59] to-[#643e9a];
+  }
 
 /* .loader1 {
   @apply /* HTML: <div class="loader"></div> 
