--- a/React-app/src/index.css
+++ b/React-app/src/index.css
@@ -20,7 +20,7 @@ body {
     @apply flex justify-center items-center;
   }
   .icon-box {
-    @apply p-2 bg-[#0ef] border-2 border-gray-700 rounded-[100%] shadow-[0px_0px_10px_3px] shadow-blue transition duration-150 ease-out ;
+    @apply  w-[40px] h-[40px] p-2 rounded-full bg-white shadow-[0_0_10px_#0ef] transition duration-150 ease-out flex items-center justify-center;
   }
   .btn {
     @apply bg-[#0ef] text-black font-bold py-2 px-4 mt-2 rounded active:scale-[1.02] shadow-[0px_0px_10px_3px] shadow-blue transition duration-150 ease-out;
