--- a/React-app/src/index.css
+++ b/React-app/src/index.css
@@ -15,6 +15,7 @@ body {
 }
 
 @theme {
+  --color-lum: #0ef;
   --color-primary: #030014;
 
   --color-light-100: #cecefb;
@@ -33,6 +34,8 @@ body {
 
 @layer base {
   body {
+    margin: 0;
+    padding: 0;
     font-family: "DM Sans", serif;
     font-optical-sizing: auto;
     background: #030014;
