UPDATED THE PROJECT THEN ON HEAD GAME

--- a/React-app/src/index.css
+++ b/React-app/src/index.css
@@ -207,7 +207,7 @@ body {
 
 
 
-.Headtail {
+.HeadTail {
   background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(159,159,168,1) 69%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
